--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib3rd/commons-math3-3.0.jar"/>
 	<classpathentry kind="lib" path="lib3rd/jeep.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MitLware-java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
